# xllm

docs/: dcu_flash_mla_plan.md
xllm/core/framework/kv_cache/: kv_cache_shape.cpp
xllm/core/kernels/: ops_api.cpp
xllm/core/kernels/dcu/: CMakeLists.txt  flash_mla_adapter.cpp  flash_mla_adapter.h
xllm/core/layers/dcu/: deepseek_v2_attention.cpp  deepseek_v2_attention.h  deepseek_v2_decoder_layer_impl.cpp  deepseek_v2_decoder_layer_impl.h
xllm/models/: models.h
xllm/models/llm/: deepseek_v2.h
